Update Testimonials “2025-05-26-luke”

--- a/src/content/testimonials/2025-05-26-luke.md
+++ b/src/content/testimonials/2025-05-26-luke.md
@@ -1,5 +1,5 @@
 ---
-author_name: Luke
+author_name: DJ Luke Wolf
 quote: S Adamem spolupracuji už delší dobu. Potřeboval jsem nafotit pár mých
   akcí, protože jsem nikdy neměl dobré fotky, které mohu využít na svou
   propagaci. S Adamem jsem se na všem potřebném domluvil a během akcí už sám
