Added another gallery

--- a/src/content/galleries/2025-03-07.md
+++ b/src/content/galleries/2025-03-07.md
@@ -2,4 +2,129 @@
 title: George Music, Předpremiéra videoklipu
 date: 2025-03-07
 cover_image: /galleries/main_gallery/dsc00326-enhanced-nr.jpg
+images:
+  - image: "/galleries/2025-03-07/DSC09996.webp"
+    alt: "Dsc09996"
+  - image: "/galleries/2025-03-07/DSC00365.webp"
+    alt: "Dsc00365"
+  - image: "/galleries/2025-03-07/DSC00362.webp"
+    alt: "Dsc00362"
+  - image: "/galleries/2025-03-07/DSC00358.webp"
+    alt: "Dsc00358"
+  - image: "/galleries/2025-03-07/DSC00355.webp"
+    alt: "Dsc00355"
+  - image: "/galleries/2025-03-07/DSC00353.webp"
+    alt: "Dsc00353"
+  - image: "/galleries/2025-03-07/DSC00349.webp"
+    alt: "Dsc00349"
+  - image: "/galleries/2025-03-07/DSC00346.webp"
+    alt: "Dsc00346"
+  - image: "/galleries/2025-03-07/DSC00345.webp"
+    alt: "Dsc00345"
+  - image: "/galleries/2025-03-07/DSC00343.webp"
+    alt: "Dsc00343"
+  - image: "/galleries/2025-03-07/DSC00334.webp"
+    alt: "Dsc00334"
+  - image: "/galleries/2025-03-07/DSC00332.webp"
+    alt: "Dsc00332"
+  - image: "/galleries/2025-03-07/DSC00330.webp"
+    alt: "Dsc00330"
+  - image: "/galleries/2025-03-07/DSC00326-Enhanced-NR.webp"
+    alt: "Dsc00326 enhanced nr"
+  - image: "/galleries/2025-03-07/DSC00321.webp"
+    alt: "Dsc00321"
+  - image: "/galleries/2025-03-07/DSC00316-Enhanced-NR.webp"
+    alt: "Dsc00316 enhanced nr"
+  - image: "/galleries/2025-03-07/DSC00293.webp"
+    alt: "Dsc00293"
+  - image: "/galleries/2025-03-07/DSC00287.webp"
+    alt: "Dsc00287"
+  - image: "/galleries/2025-03-07/DSC00272.webp"
+    alt: "Dsc00272"
+  - image: "/galleries/2025-03-07/DSC00268.webp"
+    alt: "Dsc00268"
+  - image: "/galleries/2025-03-07/DSC00262.webp"
+    alt: "Dsc00262"
+  - image: "/galleries/2025-03-07/DSC00257.webp"
+    alt: "Dsc00257"
+  - image: "/galleries/2025-03-07/DSC00255.webp"
+    alt: "Dsc00255"
+  - image: "/galleries/2025-03-07/DSC00253.webp"
+    alt: "Dsc00253"
+  - image: "/galleries/2025-03-07/DSC00252.webp"
+    alt: "Dsc00252"
+  - image: "/galleries/2025-03-07/DSC00246.webp"
+    alt: "Dsc00246"
+  - image: "/galleries/2025-03-07/DSC00232.webp"
+    alt: "Dsc00232"
+  - image: "/galleries/2025-03-07/DSC00229.webp"
+    alt: "Dsc00229"
+  - image: "/galleries/2025-03-07/DSC00214.webp"
+    alt: "Dsc00214"
+  - image: "/galleries/2025-03-07/DSC00203.webp"
+    alt: "Dsc00203"
+  - image: "/galleries/2025-03-07/DSC00199.webp"
+    alt: "Dsc00199"
+  - image: "/galleries/2025-03-07/DSC00195.webp"
+    alt: "Dsc00195"
+  - image: "/galleries/2025-03-07/DSC00190.webp"
+    alt: "Dsc00190"
+  - image: "/galleries/2025-03-07/DSC00185.webp"
+    alt: "Dsc00185"
+  - image: "/galleries/2025-03-07/DSC00177.webp"
+    alt: "Dsc00177"
+  - image: "/galleries/2025-03-07/DSC00175-Enhanced-NR.webp"
+    alt: "Dsc00175 enhanced nr"
+  - image: "/galleries/2025-03-07/DSC00157.webp"
+    alt: "Dsc00157"
+  - image: "/galleries/2025-03-07/DSC00138.webp"
+    alt: "Dsc00138"
+  - image: "/galleries/2025-03-07/DSC00130-Enhanced-NR.webp"
+    alt: "Dsc00130 enhanced nr"
+  - image: "/galleries/2025-03-07/DSC00121.webp"
+    alt: "Dsc00121"
+  - image: "/galleries/2025-03-07/DSC00111.webp"
+    alt: "Dsc00111"
+  - image: "/galleries/2025-03-07/DSC00108.webp"
+    alt: "Dsc00108"
+  - image: "/galleries/2025-03-07/DSC00102.webp"
+    alt: "Dsc00102"
+  - image: "/galleries/2025-03-07/DSC00098.webp"
+    alt: "Dsc00098"
+  - image: "/galleries/2025-03-07/DSC00096.webp"
+    alt: "Dsc00096"
+  - image: "/galleries/2025-03-07/DSC00094.webp"
+    alt: "Dsc00094"
+  - image: "/galleries/2025-03-07/DSC00086.webp"
+    alt: "Dsc00086"
+  - image: "/galleries/2025-03-07/DSC00081.webp"
+    alt: "Dsc00081"
+  - image: "/galleries/2025-03-07/DSC00078.webp"
+    alt: "Dsc00078"
+  - image: "/galleries/2025-03-07/DSC00074.webp"
+    alt: "Dsc00074"
+  - image: "/galleries/2025-03-07/DSC00072.webp"
+    alt: "Dsc00072"
+  - image: "/galleries/2025-03-07/DSC00066.webp"
+    alt: "Dsc00066"
+  - image: "/galleries/2025-03-07/DSC00056.webp"
+    alt: "Dsc00056"
+  - image: "/galleries/2025-03-07/DSC00053.webp"
+    alt: "Dsc00053"
+  - image: "/galleries/2025-03-07/DSC00043.webp"
+    alt: "Dsc00043"
+  - image: "/galleries/2025-03-07/DSC00039.webp"
+    alt: "Dsc00039"
+  - image: "/galleries/2025-03-07/DSC00038.webp"
+    alt: "Dsc00038"
+  - image: "/galleries/2025-03-07/DSC00034.webp"
+    alt: "Dsc00034"
+  - image: "/galleries/2025-03-07/DSC00030.webp"
+    alt: "Dsc00030"
+  - image: "/galleries/2025-03-07/DSC00028.webp"
+    alt: "Dsc00028"
+  - image: "/galleries/2025-03-07/DSC00010.webp"
+    alt: "Dsc00010"
+  - image: "/galleries/2025-03-07/DSC00004.webp"
+    alt: "Dsc00004"
 --- 
