--- a/src/content/galleries/2024-05-25.md
+++ b/src/content/galleries/2024-05-25.md
@@ -1,12 +1,12 @@
 ---
 title: My First Gallery
 date: 2024-05-25
-cover_image: /assets/images/uploads/placeholder.jpg
+cover_image: /placeholder.jpg
 description: A collection of beautiful moments. Halo halo?
 images:
-  - image: /assets/images/uploads/placeholder.jpg
+  - image: /placeholder.jpg
     alt: Placeholder image 1
-  - image: /assets/images/uploads/placeholder.jpg
+  - image: /placeholder.jpg
     alt: Placeholder image 2
 ---
 
