Update Testimonials “2025-05-26-natálie”

--- a/src/content/testimonials/2025-05-26-natálie.md
+++ b/src/content/testimonials/2025-05-26-natálie.md
@@ -1,6 +1,6 @@
 ---
 author_name: Natálie
-author_context: (za třídu 4.A, SOŠ Karviná)
+author_context: za třídu 4.A, SOŠ Karviná
 quote: >
   Adama jsme si vybrali s naší třídou jako fotografa na maturitní ples a bylo to
   skvělé rozhodnutí. Komunikace byla bez problémů, fotky krásné, skvěle vystihly
