--- a/src/content/galleries/2024-05-25.md
+++ b/src/content/galleries/2024-05-25.md
@@ -1,13 +1,9 @@
 ---
-title: My First Gallery
-date: 2024-05-25
-cover_image: /placeholder.jpg
-description: A collection of beautiful moments. Halo halo?
-images:
-  - image: /placeholder.jpg
-    alt: Placeholder image 1
-  - image: /placeholder.jpg
-    alt: Placeholder image 2
+title: George Music, Drink4Donate
+date: 2025-04-03
+cover_image: /galleries/main_gallery/dsc03139.jpg
+description: ""
+images: []
 ---
 
 This is the main content of the gallery. You can write more details about the photos here. 
